# python101

./: .gitignore  Totaly_not_a_virus.py  temp.py  users.sql
bankApplicatie/: pyproject.toml
bus-API/: pyproject.toml
controle ondernemingsnummer/: index.py
discord-website/: connectDB.php  index.html  index.py  login.html  register.html  style.css
discord-website-withoutFlask/: style.css
download_images_threads/: pyproject.toml
eindproef/: index.py
eindproef2/: EindProef-versie2.py  GetKlantOrder.py
eindproefOef/: index.py
eindproef_2_Dario/: EindProef-versie2.py
extra/: bakkerij.py
extra oef/: getValues.py  students.py
flask_test1/: pyproject.toml
how-long/: pyproject.toml
inlog_screen/: index.html  index_test.php  logged_in.html  register.html  style.css  styleRegister.css  style_logged_in.css
javascript/: dario_taal_ouderdom.html  index.html  oefStraal.html  opdracht_tijdschrift_dario.html  prompt.html  variabelen.html
kassaprogramma/: funcMenu.py  funcPrijzen.py  kortingen.py  (+2 more)
mysql-python/: .env  pyproject.toml
mysql-python/mysql_python/: main.py
mysql-python/tests/: test_mysql_python.py
shootergameDarioV2/: pyproject.toml
shootergameDarioV2/prep/: PreparationShooterGameV2.drawio  preparationShooterGame.drawio
shootergameDarioV2/shootergamedariov2/: createPossibleErrors.py  main.py
shootergameDarioV2/tests/: test_main.py  test_shootergamedariov2.py
test_develoment_dotenv/: pyproject.toml
test_develoment_dotenv/test_develoment_dotenv/: .env  main.py
test_develoment_dotenv/tests/: test_test_develoment_dotenv.py
(+260 files in other folders)
