[tool.poetry]
name = "shootergameDarioV2"
version = "0.1.0"
description = ""
authors = ["Dario Van Hasselt <dariovanhasselt@hotmail.be>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
